# seven-bringup

./: README.md  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: seven_nrf9151.overlay  seven_nrf9151_ns.overlay
app/src/: buzzer.c  buzzer.h  gnss.c  gnss.h  led_rbg.c  led_rbg.h  lte.c  lte.h  main.c  mikroBUS_CAN.c  mikroBUS_CAN.h  mikroBUS_sensor.c  mikroBUS_sensor.h
boards/id8/seven_nrf9151/: Kconfig.defconfig  Kconfig.seven  board.cmake  board.yml  seven_nrf9151.dts  seven_nrf9151.yaml  seven_nrf9151_common-pinctrl.dtsi  seven_nrf9151_common.dtsi  seven_nrf9151_ns.dts  seven_nrf9151_ns.yaml
boards/id8/seven_nrf9151/doc/: index.rst
dts/bindings/: vendor-prefixes.txt
dts/bindings/misc/: id8,buzzer.yaml
